--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
+  "homepage": "https://shadiex1.github.io/CreateCorp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
